# akgate

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  gunicorn.conf.py  pyproject.toml  requirements.txt  run.py
.github/workflows/: docker-build.yml  docker-image.yml  update-akshare-and-build.yml
app/: __init__.py  config.py  exceptions.py  logging_config.py  settings.py
app/akshare/: views.py
app/api/: views.py
app/encoder/: __init__.py  json_encoder.py  json_provider.py
app/grid/: __init__.py  services.py  views.py
app/grid/assets/: code_rules.json
app/health/: __init__.py  views.py
app/z/: services.py  views.py
tests/: __init__.py  conftest.py  test_api.py  test_encoder.py  test_health.py
